--- a/ref.bib
+++ b/ref.bib
@@ -344,3 +344,18 @@ Internet of things CISCO
   booktitle={XX Workshop de Investigadores en Ciencias de la Computaci{\'o}n (WICC 2018, Universidad Nacional del Nordeste).},
   year={2018}
 }
+
+@article{monitoringMoisture,
+  author          = {Ivan Araquistain, Jose Miguel Abascal, Oriol Munne},
+  journal         = {Tecnalia Research and Innovation},
+  number          = {nº 5 20730},
+  title           = {WIRELESS SENSOR NETWORK TECHNOLOGY FOR MONITORING MOISTURE CONTENT OF WOOD},
+  year            = {2017}
+}
+
+@article{woodPreservation,
+  author          = {Margarita Kisternaya, Valery Kozlov},
+  journal         = {Russian Academy of Sciences},
+  title           = {Wood science approach for the preservation of historic timber structures},
+  year            = {2015}
+}
