--- a/ref.bib
+++ b/ref.bib
@@ -359,3 +359,8 @@ Internet of things CISCO
   title           = {Wood science approach for the preservation of historic timber structures},
   year            = {2015}
 }
+
+@article{rodriguezcodigo,
+  title={C{\'O}DIGO: 1.7 METODOLOG{\'I}A PARA LA INSPECCI{\'O}N, EVALUACI{\'O}N Y DIAGN{\'O}STICO MEDIANTE T{\'E}CNICAS NO DESTRUCTIVAS DEL ESTADO ESTRUCTURALDE PUENTES DE MADERA EN ESPA{\~N}A},
+  author={Rodr{\'\i}guez, Soledad and Vivas, Julio and Vega, Abel and Ba{\~n}o, Vanesa}
+}
