27 de mayo 3:15pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -230,10 +230,7 @@
     La medida del nivel de salitre, como se muestra en la tabla (ref), es obtenida mediante el análisis del nivel de humedad presente en los locales de la muestra.\\
     …
 
-    En el caso del control de la aparición de los xilófagos, esta es obtenida a partir del análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento. Según \cite{monitoringMoisture} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
-
-    La temperatura también influye en la aparición de los xilófagos a tal nivel ...\\
-
+    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
 
     \textbf{Alimentación} 
 
@@ -245,8 +242,9 @@
     El procesamiento de toda la data ...
     
     \subsection{Capa de aplicación}\label{subsec:capa_aplicacion}
-    Pantalla TFT y Realidad Aumentada ...\newline
+    Pantalla TFT y Realidad Aumentada ...\\
 
+    \vspace{6cm}
 
     \begin{figure}[h]
         \centering
@@ -255,8 +253,6 @@
             \subcaption*{Fuente: Elaboración propia}
         \label{imag:descripcionArquitectura}
     \end{figure}
-
-    ...\newline
 
     Así, esta arquitectura pretende servir de referencia para la implementación de servicios basados en IoT en el área de conservación de las piezas en los museos o instituciones con vista al desarrollo de entornos inteligentes.\\
 
