--- a/ref.bib
+++ b/ref.bib
@@ -362,5 +362,6 @@ Internet of things CISCO
 
 @article{rodriguezcodigo,
   title={C{\'O}DIGO: 1.7 METODOLOG{\'I}A PARA LA INSPECCI{\'O}N, EVALUACI{\'O}N Y DIAGN{\'O}STICO MEDIANTE T{\'E}CNICAS NO DESTRUCTIVAS DEL ESTADO ESTRUCTURALDE PUENTES DE MADERA EN ESPA{\~N}A},
+  year={2014},
   author={Rodr{\'\i}guez, Soledad and Vivas, Julio and Vega, Abel and Ba{\~n}o, Vanesa}
 }
