27 de mayo 5:00pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -107,6 +107,8 @@
             \end{itemize} 
     \end{itemize}
 
+    \textbf{Argumentar más ...}
+
     \subsection{Propuesta de la Arquitectura IoT del Sistema}
 
     En base de los esquemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas que son: La capa de percepción cuya función es la obtención de variables asociadas a la conservación de las piezas en la muestra, la capa de transporte con el propósito de transportar la data recopilada por los sensores para su posterior procesamiento y análisis, la capa de procesamiento que genera predicciones y recomendaciones expuesta a cambios constantes de los valores que se reciben desde el comienzo del ciclo en la etapa de percepción y, la capa de aplicación, la cual permite a los usuarios finales visualizar en una interfaz y mediante el empleo de la RA (Realidad Aumentada), los datos y predicciones en dependencia de la información recopilada.\\
