--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -134,7 +134,7 @@
 
     \begin{figure}[h]
         \centering
-        \includegraphics[width=10cm, height=5.3cm]{imagenes/formas expositivas.jpg}
+        \includegraphics[width=10cm, height=6cm]{imagenes/formas expositivas.jpg}
         \caption{Ubicación piezas}
         \subcaption*{Fuente: Elaboración propia}
         \label{imag:ubicacion_piezas}
@@ -177,6 +177,8 @@
 
     \textbf{Microcontrolador}
 
+    Un microcontrolador (abreviado: MCU) es un circuito integrado programable, capaz de ejecutar las órdenes grabadas en su memoria. Está compuesto de varios bloques funcionales, los cuales cumplen una tarea específica. Un microcontrolador incluye en su interior las tres principales unidades funcionales de una computadora: unidad central de procesamiento, memoria y periféricos de entrada/salida.\\
+
     Dentro de la familia de los ESP se encuentra el NodeMCU. Este microcontrolador (Imagen \ref{imag:nodemcu}) será el encargado de recibir los datos de los sensores y organizarlos en función de su continua transmisión hacia el concentrador.\\
 
     \begin{figure}[h]
@@ -189,7 +191,7 @@
     
     NodeMCU es una pequeña placa Wifi compatible con Arduino, lista para usar en cualquier proyecto IoT. Está montada alrededor del microcontrolador ESP8266 y expone todos sus pines en los laterales. Además, ofrece más ventajas como la incorporación de un regulador de tensión integrado, así como un puerto USB de programación. Se puede programar con LUA o mediante el IDE de Arduino.\\
 
-    Dispone de una extensa comunidad y documentación que permitirá conectar el proyecto mediante conexión Wifi.\\
+    Dispone de una extensa comunidad y documentación que permitirá conectar el proyecto mediante conexión Wifi.\\\\\\
 
     \textbf{Características}
     \begin{itemize}
@@ -203,11 +205,11 @@
         \item 1 entrada analógica (1.0V max).
         \item 4 agujeros de montaje (3mm).
         \item Pulsador de RESET.
-        \item Entrada alimentación externa VIN (20V max).\\
+        \item Entrada alimentación externa VIN (20V max).
     \end{itemize}
 
     \textbf{Sensores}\\
-    En el caso de los sensores, la siguiente tabla relaciona el sensor a emplear según la variable a controlar.
+    En el caso de los sensores, la tabla \ref{tab:relacion_sensores} relaciona el sensor a emplear según la variable a controlar.
 
     \begin{table}[h]
         \centering
@@ -229,13 +231,14 @@
         \label{tab:relacion_sensores}
     \end{table}
 
-    La medida del nivel de salitre, como se muestra en la tabla (ref), es obtenida mediante el análisis del nivel de humedad presente en los locales de la muestra.\\
+    La medida del nivel de salitre, como se muestra en la tabla, es obtenida mediante el análisis del nivel de humedad presente en los locales de la muestra.\\
     …
 
-    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
+    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.
 
     \textbf{Alimentación} 
 
+    La revolución de las baterías de litio viene dando pasos agigantados...\\ 
 
     \subsection{Capa de transporte}\label{subsec:capa_transporte}
     Entre las tres salas que componen la muestra existes una separación considerable por ello la necesidad de incorporar una comunicación inalámbrica.
@@ -257,8 +260,6 @@
     \end{figure}
 
     Así, esta arquitectura pretende servir de referencia para la implementación de servicios basados en IoT en el área de conservación de las piezas en los museos o instituciones con vista al desarrollo de entornos inteligentes.\\
-
-    %\section{Análisis de variables y sensores}\label{sec: analisisVariables}
 
     %\section{Sistema de comunicación}\label{sec: sistemaComunicación}
 
